# OpenRMF-Introduction

./: README.md
assets/: CMakeLists.txt  package.xml
assets/hooks/: assets.dsv.in
bridges/: package.xml  setup.cfg  setup.py
config/: CMakeLists.txt  package.xml
config/config/warehouse/: tinyrobot_config.yaml  tinyrobot_config_2.yaml
config/launch/: warehouse.launch.xml
fleet_adapter/: config.yaml  package.xml  setup.py
maps/: CMakeLists.txt  package.xml
maps/maps/warehouse/: warehouse.building.yaml
simulation/: CMakeLists.txt  package.xml
simulation/launch/: simulation.launch.xml  warehouse.launch.xml
tasks/: package.xml  setup.py
