<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>config</name>
  <version>2.8.0</version>
  <description>Common launch files</description>
  <maintainer email="roch4619@gmail.com">Roch Ronaldo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>maps</exec_depend>

  <exec_depend>rmf_reservation_node</exec_depend>
  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>rmf_task_ros2</exec_depend>
  <exec_depend>rmf_fleet_adapter</exec_depend>
  <exec_depend>rmf_building_map_tools</exec_depend>

  <exec_depend>rmf_visualization</exec_depend>

  <exec_depend>assets</exec_depend>
  <exec_depend>tasks</exec_depend>
  <exec_depend>fleet_adapter</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>launch_xml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
